templates/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: webapp-cve-consumer
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels: 
      statefulset.kubernetes.io/pod-name: postgres-postgresql-0
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cve-consumer
    ports:
    - protocol: TCP
      port: 5432
  policyTypes:
  - Ingress
